--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 
 [packages]
 twine = "*"
-setuptools-git-version = "*"
 tapioca = "*"
+wheel = "*"
 
 [requires]
 python_version = "3.7"
